--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "4.0.0",
+    "@expo/vector-icons": "10.2.1",
+    "apollo-boost": "0.4.9",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
+    "graphql": "15.3.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation": "4.4.0",
+    "styled-components": "5.2.0",
+    "expo-font": "~8.2.1",
+    "expo-asset": "~8.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
