--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@apollo/react-hooks": "4.0.0",
     "@expo/vector-icons": "10.2.1",
     "apollo-boost": "0.4.9",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-cache-persist": "0.1.1",
     "expo": "~38.0.8",
+    "expo-asset": "~8.1.7",
+    "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "graphql": "15.3.0",
     "react": "~16.11.0",
@@ -19,9 +23,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-web": "~0.11.7",
     "react-navigation": "4.4.0",
-    "styled-components": "5.2.0",
-    "expo-font": "~8.2.1",
-    "expo-asset": "~8.1.7"
+    "styled-components": "5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
