--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@apollo/react-hooks": "4.0.0",
     "@expo/vector-icons": "10.2.1",
+    "@react-native-community/masked-view": "0.1.10",
     "apollo-boost": "0.4.9",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-cache-persist": "0.1.1",
@@ -21,8 +22,11 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "1.8.0",
+    "react-native-screens": "2.10.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "4.4.0",
+    "react-navigation-stack": "2.8.2",
     "styled-components": "5.2.0"
   },
   "devDependencies": {
