--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "4.4.0",
     "react-navigation-stack": "2.8.2",
-    "styled-components": "5.2.0"
+    "react-navigation-tabs": "2.9.0",
+    "styled-components": "5.2.0",
+    "react-native-reanimated": "~1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
