--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "graphql": "15.3.0",
+    "prop-types": "15.7.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "1.8.0",
+    "react-native-reanimated": "~1.9.0",
     "react-native-screens": "2.10.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "4.4.0",
     "react-navigation-stack": "2.8.2",
     "react-navigation-tabs": "2.9.0",
-    "styled-components": "5.2.0",
-    "react-native-reanimated": "~1.9.0"
+    "styled-components": "5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
