--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
     "expo-font": "~8.2.1",
+    "expo-media-library": "8.4.0",
+    "expo-permissions": "9.1.0",
     "expo-status-bar": "^1.0.2",
     "graphql": "15.3.0",
     "prop-types": "15.7.2",
