--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-cache-persist": "0.1.1",
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
+    "expo-camera": "8.3.1",
     "expo-font": "~8.2.1",
     "expo-media-library": "8.4.0",
     "expo-permissions": "9.1.0",
